--- a/assets/src/css/plugin.scss
+++ b/assets/src/css/plugin.scss
@@ -1,1 +1,47 @@
-@import 'node_modules/bootstrap/scss/bootstrap';
+#stc {
+	h1 {
+		font-size: 48px;
+		font-weight: 400;
+	}
+
+	p {
+		font-size: 16px;
+	}
+
+	.inputfile {
+		width: 0.1px;
+		height: 0.1px;
+		opacity: 0;
+		overflow: hidden;
+		position: absolute;
+		z-index: -1;
+
+		&+label {
+			font-size: 1.25em;
+			font-weight: 700;
+			color: white;
+			background-color: black;
+			display: inline-block;
+			cursor: pointer;
+			padding: 1.5em 4em;
+			transition: all 0.3s;
+		}
+
+		&+label * {
+			pointer-events: none;
+		}
+
+		&:focus+label {
+			outline: 1px dotted #000;
+			outline: -webkit-focus-ring-color auto 5px;
+		}
+
+		&:focus+label,
+		&+label:hover {
+			background-color: red;
+		}
+	}
+}
+
+
+
